src/app/app-styles.scss
/* ... */
.object-badge__wrapper--object-view {
  justify-content: center;
  display: flex;
  width: 100%;
}

/* ----------
EMAIL FORM 
---------- */
.log-in__header {
  @include view-title--desktop;
}

.email-form {
  display: flex;
  flex-direction: column;
  max-width: 400px;
  width: 100%;
}

@media (min-width: 600px) {
  .email-form {
    min-width: 400px;
  }
}

.email-form__label {
  font-size: $small-font-size;
  font-weight: $regular-weight;
  margin: 0.5em 0;
}

.email-form__input {
  align-self: flex-start;
  background: black;
  box-sizing: border-box;
  border-radius: 4px;
  border: 1px solid #cccccc;
  color: $primary-text-color;
  font-size: $medium-font-size;
  margin-bottom: 1em;
  padding: 1em;
  width: 100%;
}

.email-form__checkbox-and-message-wrapper {
  display: flex;
  align-items: flex-start;
  margin: 0.5em 0 0.5em 0;
}

.email-form__button-wrapper {
  align-items: center;
  display: flex;
  justify-content: space-between;
  margin-top: 1em;
  text-align: center;
}

.email-form__button--black {
  border: 1px solid #c4c4c4;
  border-radius: 4px;
  display: inline-block;
  font-size: $medium-font-size;
  font-weight: 500;
  line-height: $medium-line-height;
  padding: 1em 2em;
}

.email-form__button--black:hover {
  cursor: pointer;
}

.email-form__button--white {
  background: $primary-text-color;
  border-radius: 4px;
  color: $primary-theme-color;
  display: inline-block;
  font-size: $medium-font-size;
  font-weight: $light-weight;
  line-height: $medium-line-height;
  padding: 1em 2em;
}

.email-form__button--white:hover {
  cursor: pointer;
}

.email-form__link-to-login-wrapper {
  margin-top: 1em;
}

.email-form__sign-up-text,
.email-form__log-in-text {
  text-decoration: underline;
  margin-top: 1em;
}

.email-form__error {
  color: $primary-highlight-color;
  margin-bottom: 1em;
}

/* ----------
BURGER MENU
---------- *?
/* Individual item */
.bm-item {
  display: inline-block;
  /* Our sidebar item styling */
  text-decoration: none;
  margin-bottom: 10px;
  color: #d1d1d1;
  transition: color 0.2s;
}

/* Change color on hover */
.bm-item:hover {
  color: white;
}

/* The rest copied directly from react-burger-menu docs */

/* Position and sizing of burger button */
.bm-burger-button {
  position: fixed;
  width: 36px;
  height: 30px;
  right: 10px;
  top: 10px;
}

// anything bigger than an ipad
@media (min-width: 800px) {
  .bm-burger-button {
    display: none;
  }
}

/* Color/shape of burger icon bars */
.bm-burger-bars {
  background: white;
}

/* Position and sizing of clickable cross button */
.bm-cross-button {
  height: 24px;
  width: 24px;
}

/* Color/shape of close button cross */
.bm-cross {
  background: #bdc3c7;
}

/* General sidebar styles */
.bm-menu {
  background: #2d2d2d;
  padding: 1em;
  font-size: $extra-large-font-size;
  line-height: 50px;
}

/* Morph shape necessary with bubble or elastic */
.bm-morph-shape {
  fill: #373a47;
}

/* Wrapper for item list */
.bm-item-list {
  color: $primary-text-color;
}

/* Styling of overlay */
.bm-overlay {
  background: rgba(0, 0, 0, 0.3);
}

/* ----------
COPY TEXT
---------- */
.app__copy-text {
  color: $secondary-theme-color;
  line-height: $small-line-height;
  margin-left: 0.5em;
  size: $extra-small-font-size;
  text-decoration-line: underline;
}

.app__copy-text:hover {
  cursor: pointer;
}

// TODO color of font for these messages?
.app__loading-message {
  color: $primary-highlight-color;
  font-size: $large-font-size;
  margin: 1em 0;
  text-align: center;
}

.app__success-message,
.app__error-message {
  color: $primary-highlight-color;
  font-size: $large-font-size;
  margin: 1em 0;
}

/* ----------
WELCOME VIEW
----------- */
.welcome__wrapper {
  font-family: $display-font;
}

.welcome__content__wrapper {
  max-width: 1080px;
  margin: 0 auto;
  padding: 0 1.5em;
}

.welcome__bottom__wrapper {
  background-color: $tertiary-color;
}

.welcome__section--one {
  background-color: $primary-theme-color;
  padding: 3.5em 0em 7em;
}

.welcome__section--two {
  background-color: $primary-theme-color;
  padding: 0;
}

.welcome__section--three {
  background-color: $primary-theme-color;
  padding: 0 0 3em 0;
}

.welcome__section--four {
  padding: 4em 0 4em 0;
  max-width: 1080px;
  margin: 0 auto;
}

@media (min-width: 600px) {
  .welcome__section--one {
    padding: 7em 4em 9em;
  }

  .welcome__section--two {
    padding: 0 4em 0 4em;
  }

  .welcome__section--three {
    padding: 0 4em 4em 4em;
  }

  .welcome__section--four {
    padding: 4em 4em 4em 4em;
  }
}

.welcome__title-logo-wrapper {
  text-align: center;
}

.welcome__image {
  object-fit: cover;
  width: 100%;
}

.welcome__logo-image {
  max-width: 260px;
}

@media (min-width: 600px) {
  .welcome__logo-image {
    max-width: 300px;
  }
}

.welcome__trusat-tagline {
  font-size: 16px;
  letter-spacing: 0.08em;
  line-height: 19px;
  margin: 1em 0;
  position: relative;
}

@media (min-width: 600px) {
  .welcome__trusat-tagline {
    font-size: 24px;
    line-height: 37px;
    margin: 1em 0;
  }
}

.welcome__globe-image {
  // max-width: 650px;
  margin-top: -3em;
}

@media (min-width: 600px) {
  .welcome__globe-image {
    max-width: 800px;
    margin-top: -8em;
  }
}

.welcome__title-intro-wrapper {
  margin: -2em 1em 1em 1em;
  text-align: center;
}

@media (min-width: 600px) {
  .welcome__title-intro-wrapper {
    margin: -7em 2em 1em 2em;
  }
}

.welcome_arrow-wrapper {
  width: 100%;
  text-align: center;
}

.welcome__arrow-image {
  max-width: 20px;
}

.welcome__illustration-join-wrapper {
  display: flex;
  justify-content: space-between;
  margin: 0 0 8em 0;
}

@media (min-width: 600px) {
  .welcome__illustration-join-wrapper {
    margin-bottom: 10em;
  }
}

// flip middle join wrapper order on mobile
@media (max-width: 600px) {
  .welcome__illustration-join-wrapper {
    flex-wrap: wrap;
  }

  .welcome__illustration-join-wrapper--center {
    flex-direction: column-reverse;
  }
}

.welcome__illustration {
  width: 100%;
}
/* ... */

